Fix #113 some surnames not visible in top-n surnames block

--- a/src/sass/theme/_pages-blocks.scss
+++ b/src/sass/theme/_pages-blocks.scss
@@ -150,3 +150,9 @@
         }
     }
 }
+
+.wt-block-content-top10_surnames {
+    tr.even {
+        background-color: transparent !important;
+    }
+}
